<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.rotacilio.meusgastos.views.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.signup.SignUpActivity">

        <EditText
            android:id="@+id/idFirstNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:text="@={viewModel.firstName}"
            android:hint="@string/hint_first_name"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/idLastNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text="@={viewModel.lastName}"
            android:hint="@string/hint_last_name"
            app:layout_constraintTop_toBottomOf="@id/idFirstNameEdt"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/idEmailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text="@={viewModel.email}"
            android:hint="@string/hint_email"
            app:layout_constraintTop_toBottomOf="@id/idLastNameEdt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/idPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text="@={viewModel.password}"
            android:hint="@string/hint_password"
            app:layout_constraintTop_toBottomOf="@id/idEmailEdt"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <EditText
            android:id="@+id/idConfirmPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text="@={viewModel.confirmPassword}"
            android:hint="@string/hint_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/idPasswordEdt"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:onClick="@{() -> viewModel.onClickSignUp()}"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/idConfirmPasswordEdt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
